--- a/custom.org
+++ b/custom.org
@@ -1151,6 +1151,8 @@ function.
       (flycheck-mode 1)
       (add-hook 'before-save-hook 'gofmt-before-save))
 
+    (define-key go-mode-map (kbd "C-c C-t") 'k20e/toggle-test-buffer)
+
     (add-hook 'go-mode-hook 'k20e/go-mode-hook)
   #+END_SRC
 
