--- a/custom.org
+++ b/custom.org
@@ -214,7 +214,7 @@ function.
    Sort by relevancy.
 
    #+BEGIN_SRC emacs-lisp
-     (setq apropos-sort-by-scores t)
+     (setq-default apropos-sort-by-scores t)
    #+END_SRC
 
 ** =cycle-spacing=
@@ -1391,7 +1391,7 @@ function.
   width.
 
   #+BEGIN_SRC emacs-lisp
-    (setq Man-width 80)
+    (setq-default Man-width 80)
   #+END_SRC
 
 * markdown-mode
