go-mode - Fix typo in lint dir.

--- a/custom.org
+++ b/custom.org
@@ -1180,7 +1180,7 @@ function.
 
     (defun k20e/go-mode-hook ()
       (let ((gopath (getenv "GOPATH"))
-            (d "/src/github.com/golang/lint/misc/emacs")
+            (d "src/github.com/golang/lint/misc/emacs")
             (f "golint.el"))
         (require 'golint (expand-file-name f (expand-file-name d gopath))))
       (setq tab-width 4
