--- a/custom.org
+++ b/custom.org
@@ -628,6 +628,7 @@ function.
        "Load a darkly colored theme for conditions when ambient light
      is dark."
        (interactive)
+       (require 'linum)
        (disable-theme (car custom-enabled-themes))
        (load-theme k20e/theme-dark t)
        (set-face-background 'hl-line "gray20")
@@ -1403,6 +1404,8 @@ function.
 * LaTeX
 
   #+BEGIN_SRC emacs-lisp
+    (require 'tex-mode)
+
     (define-key latex-mode-map (kbd "C-j") 'join-line)
   #+END_SRC
 
