--- a/custom.org
+++ b/custom.org
@@ -1419,7 +1419,7 @@ function.
     (require 'json)
 
     (defun k20e/js-mode-hook ()
-      (setq flycheck-gjslintrc "gjslintrc")
+      (setq-default flycheck-gjslintrc "gjslintrc")
       (flycheck-mode 1))
 
     (add-hook 'js-mode-hook 'k20e/js-mode-hook)
