--- a/custom.org
+++ b/custom.org
@@ -2208,8 +2208,7 @@ function.
 
 ** =ControlPath=
 
-   Fix =ControlPath too long= errors due to OS X pitching a [[https://lists.macosforge.org/pipermail/macports-tickets/2011-June/084295.html][long
-   temporary directory]] to =ssh=.
+   Fix =ControlPath too long= errors due to OS X pitching a [[https://lists.macosforge.org/pipermail/macports-tickets/2011-June/084295.html][long temporary directory]] to =ssh=.
 
    Unfortunately, setting this is blowing up the =server-start= which
    can no longer find the socket stored in the original =TMPDIR=
