Enable wrapping in Ivy

--- a/custom.org
+++ b/custom.org
@@ -1366,7 +1366,8 @@ function.
 
     (ivy-mode 1)
 
-    (setq ivy-use-virtual-buffers t)
+    (setq ivy-use-virtual-buffers t
+          ivy-wrap t)
 
     (global-set-key (kbd "C-c C-r") 'ivy-resume)
     (global-set-key (kbd "C-x b") 'ivy-switch-buffer)
